Fix bug for new models

--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -20,7 +20,7 @@
         <h3 class="w3-xxlarge w3-text-black"><b>Original Image</b></h3>
         <hr style="width:50px;border:5px solid blue" class="w3-round">
         <center><h3 class="w3-xlarge w3-text-black">Original T2</h3></center>
-        <center><img src="{{ url_for('static', filename='images/orig/t2w_mri.jpg') }}" alt="T2w" style="width:80%;"></center>
+        <center><img src="{{ url_for('static', filename='images/orig/t2w_mri.png') }}" alt="T2w" style="width:80%;"></center>
       </div>
       <div class="column">
         <h3 class="w3-xxlarge w3-text-black"><b>Segmentation</b></h3>
